fixed the expanded view, it is not cropping anymore. need to center it now

--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -436,15 +436,18 @@ h1, .h1 {
   }
 }
 .overview-carousel-image {
-  background-position: center;
   background-repeat: no-repeat;
   background-origin: fixed;
   background-color: transparent;
-  height: 100%;
-  width: 100%;
-  max-height: 100%;
-  max-width: 100%;
   margin: auto;
+  width: 100%;
+  height: 100%;
+}
+.overview-carousel-image-expanded {
+  width: 250%;
+  height: 250%;
+  max-width: 250%;
+  max-height: 250%;
 }
 .overview-carousel-image-wrapper {
   background-color: $off-white;
